renamed lineup to roster